--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 /home/maxi/Documents/terraform/devopstraining/.terraform/providers/registry.terraform.io/hashicorp/aws/5.25.0/linux_amd64/terraform-provider-aws_v5.25.0_x5 filter=lfs diff=lfs merge=lfs -text
+terraform-provider* filter=lfs diff=lfs merge=lfs -text
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.25.0/linux_amd64/terraform-provider-aws_v5.25.0_x5 filter=lfs diff=lfs merge=lfs -text
